--- a/client/src/app/admin-home/admin-home.component.html
+++ b/client/src/app/admin-home/admin-home.component.html
@@ -49,7 +49,7 @@
         <nav class="sidenav">
             <section class="sidenav-content">
                 <a href="javascript://" class="nav-link" [class.active]="currentView=='status'" (click)="changeView('status')">
-                    System Status
+                    System Dashboard
                 </a>
                 <a href="javascript://" class="nav-link" [class.active]="currentView=='logs'" (click)="changeView('logs')">
                     Logs
