Display the robot status: * send robot state to client when monitoring starts * send robot state to all monitors when a state update received * include source details in monitor messages * include status in robot UI and handle state update messages * store all clients by id in UI

--- a/client/src/app/system-status/system-status.component.html
+++ b/client/src/app/system-status/system-status.component.html
@@ -14,7 +14,8 @@
                     </div>
                 </div>
                 <div class="card-text">
-                    ...
+                    <b>Status:</b>
+                    {{robot.status || 'Unknown'}}
                 </div>
             </div>
             <div class="card-footer">
@@ -37,7 +38,6 @@
                     </div>
                 </div>
                 <div class="card-text">
-                    ...
                 </div>
             </div>
             <div class="card-footer">
