--- a/client/src/app/system-status/system-status.component.html
+++ b/client/src/app/system-status/system-status.component.html
@@ -65,8 +65,8 @@
         <div style="height: calc(100% - 2rem); overflow-y: auto; border: 1px solid #cccccc;">
             <div *ngIf="currentClient">
                 <div *ngFor="let message of currentClient.messages" style="margin-left: 0.2rem;">
-                    <clr-icon [attr.shape]="'details'"></clr-icon>
-                    {{message.function}}: {{message.status}}
+                    <clr-icon [attr.shape]="message.type"></clr-icon>
+                    {{message.displayMessage ? message.displayMessage() : message.message}}
                 </div>
             </div>
         </div>
