--- a/client/src/app/system-status/system-status.component.html
+++ b/client/src/app/system-status/system-status.component.html
@@ -62,9 +62,9 @@
                 <button type="button" class="btn btn-sm btn-secondary" (click)="currentClient.messages = []">
                     <clr-icon shape="trash"></clr-icon> Clear
                 </button>
-                <button type="button" class="btn btn-sm btn-secondary" (click)="currentClient.messages = []">
+                <!-- <button type="button" class="btn btn-sm btn-secondary" (click)="currentClient.messages = []">
                     <clr-icon shape="window-restore"></clr-icon> Pop-out
-                </button>
+                </button> -->
             </div>
         </div>
         <div style="height: calc(100% - 2rem); overflow-y: auto; border: 1px solid #cccccc;">
@@ -87,12 +87,12 @@
     <div class="modal-body" style="height: 70vh;">
         <div style="height: 2rem;">
             <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-secondary" (click)="currentClient.messages = []">
+                <button type="button" class="btn btn-sm btn-secondary" (click)="currentProgram = undefined">
                     <clr-icon shape="trash"></clr-icon> Clear
                 </button>
-                <button type="button" class="btn btn-sm btn-secondary" (click)="currentClient.messages = []">
+                <!-- <button type="button" class="btn btn-sm btn-secondary" (click)="currentClient.messages = []">
                     <clr-icon shape="window-restore"></clr-icon> Pop-out
-                </button>
+                </button> -->
             </div>
         </div>
         <div style="height: calc(100% - 2rem); overflow-y: auto; border: 1px solid #cccccc;">
