Update  line status in UI when viewing a program.

--- a/client/src/app/system-status/system-status.component.html
+++ b/client/src/app/system-status/system-status.component.html
@@ -97,7 +97,7 @@
         </div>
         <div style="height: calc(100% - 2rem); overflow-y: auto; border: 1px solid #cccccc;">
             <div style="margin: 0 0.3rem;">
-                <app-program-display [program]="currentProgram" [isLoading]="isProgramLoading"></app-program-display>
+                <app-program-display [isLoading]="isProgramLoading"></app-program-display>
             </div>
         </div>
     </div>
