--- a/client/src/app/system-status/system-status.component.html
+++ b/client/src/app/system-status/system-status.component.html
@@ -62,18 +62,13 @@
                 <button type="button" class="btn btn-sm btn-secondary" (click)="currentClient.messages = []">
                     <clr-icon shape="trash"></clr-icon> Clear
                 </button>
-                <!-- <button type="button" class="btn btn-sm btn-secondary" (click)="currentClient.messages = []">
+                <button type="button" class="btn btn-sm btn-secondary" (click)="openPopout('robotLog')">
                     <clr-icon shape="window-restore"></clr-icon> Pop-out
-                </button> -->
+                </button>
             </div>
         </div>
         <div style="height: calc(100% - 2rem); overflow-y: auto; border: 1px solid #cccccc;">
-            <div *ngIf="currentClient">
-                <div *ngFor="let message of currentClient.messages" style="margin-left: 0.2rem;">
-                    <clr-icon [attr.shape]="message.type"></clr-icon>
-                    {{message.displayMessage ? message.displayMessage() : message.message}}
-                </div>
-            </div>
+            <app-log-viewer [client]="currentClient"></app-log-viewer>
         </div>
     </div>
     <div class="modal-footer">
@@ -90,9 +85,9 @@
                 <button type="button" class="btn btn-sm btn-secondary" (click)="currentProgram = undefined">
                     <clr-icon shape="trash"></clr-icon> Clear
                 </button>
-                <!-- <button type="button" class="btn btn-sm btn-secondary" (click)="currentClient.messages = []">
+                <button type="button" class="btn btn-sm btn-secondary" (click)="openPopout('program')">
                     <clr-icon shape="window-restore"></clr-icon> Pop-out
-                </button> -->
+                </button>
             </div>
         </div>
         <div style="height: calc(100% - 2rem); overflow-y: auto; border: 1px solid #cccccc;">
