--- a/client/src/app/tangible-editor/tangible-editor.component.html
+++ b/client/src/app/tangible-editor/tangible-editor.component.html
@@ -66,4 +66,5 @@
     <app-about></app-about>
     <app-change-role [role]="'Student'"></app-change-role>
     <app-change-view view="Tangibles"></app-change-view>
+    <app-execution-status [isOpen]="sendingToRobot" [steps]="steps" [statusMessage]="startMessage" (onClose)="doCancelSend()"></app-execution-status>
 </div>
