--- a/client/src/app/tangible-editor/tangible-editor.component.html
+++ b/client/src/app/tangible-editor/tangible-editor.component.html
@@ -49,8 +49,9 @@
                         <div class="card-block">
                             <div class="card-text">
                                 <div style="display: block; height:480px; overflow: hidden;">
-                                    <div style="width: 273px; height: 93px; margin-top: 7px; margin-left: auto; margin-right: auto;" *ngFor="let block of blocks">
+                                    <div class="tangible" [ngClass]="{'highlight': block.highlight}" *ngFor="let block of blocks">
                                         <img src="/assets/img/{{block.image}}.png">
+                                        <p>{{block.text}}</p>
                                     </div>
                                 </div>
                             </div>
