Set camera background to grey when off.

--- a/client/src/app/tangible-editor/tangible-editor.component.html
+++ b/client/src/app/tangible-editor/tangible-editor.component.html
@@ -34,7 +34,7 @@
                     <div class="card">
                         <div class="card-block">
                             <div class="card-text">
-                                <canvas #videoCanvas id="video-canvas" width="640" height="480" style="background: #000; display: block; margin-left: auto; margin-right: auto;">
+                                <canvas #videoCanvas id="video-canvas" width="640" height="480">
                                 </canvas>
                             </div>
                         </div>
