--- a/client/src/app/tangible-editor/tangible-editor.component.scss
+++ b/client/src/app/tangible-editor/tangible-editor.component.scss
@@ -29,3 +29,10 @@
     background-color: #3399ff;
     border-radius: 4px;
 }
+
+#video-canvas {
+    background: #ddd;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
